# blitz

./: .gitignore  CLAUDE.md  DEMO_SCRIPT.md  README.md  Superset_AI_Solutions_Builder.tex  notes.md  progress.md
backend/: .env.example  db.py  graph.py  leads_db.py  llm.py  main.py  pyproject.toml  requirements.txt  state.py
backend/agents/: __init__.py
backend/agents/agent_0_research/: a0_imp.md  node.py  progress.py  prompts.py  research.py  schemas.py  test_agent0.py
backend/agents/agent_1_profile/: a1_imp.md  node.py  prompts.py  schemas.py  test_agent1.py
backend/agents/agent_2_audience/: a2_imp.md  node.py  prompts.py  schemas.py  test_agent2.py
backend/agents/agent_3_content/: a3_imp.md  node.py  prompts.py  schemas.py  test_agent3.py
backend/agents/agent_4_sales/: a4_imp.md  node.py  prompts.py  schemas.py  test_agent4.py
backend/agents/agent_5_ads/: a5_imp.md  node.py  prompts.py  schemas.py  test_agent5.py
backend/agents/agent_voice/: elevenlabs_client.py  models.py
docs/plans/: 2026-02-21-kana-campaign-engine-design.md  2026-02-21-kana-campaign-engine-implementation.md
frontend/: .env.demo  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: AdMockup.tsx  AdsView.tsx  AeoGauge.tsx  AgentStep.tsx  ApprovalGate.tsx  AudienceView.tsx  ContentView.tsx  DossierView.tsx  EmailPreview.tsx  InstagramCard.tsx  ProfileView.tsx  ProgressTimeline.tsx  SalesView.tsx  SegmentCard.tsx  SummaryPage.tsx  Wizard.tsx
frontend/src/demo/: airbnb.json  blossom.json  demoConfig.ts  (+2 more)
imp/: jd.txt
(+10 files in other folders)
